# flutter_pulseaudio

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
lib/: flutter_pulseaudio.dart  flutter_pulseaudio_bindings_generated.dart
lib/src/: pulseaudio.dart  pulseaudio_bindings.dart  pulseaudio_service.dart  pulseaudio_simple_service.dart
lib/src/models/: pulse_request.dart  pulse_response.dart  sink_device.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  flutter_pulseaudio.c
